// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Businesses component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="content"
  >
    <div
      className="row"
    >
      <h3
        style={
          Object {
            "color": "maroon",
            "paddingLeft": "20px",
          }
        }
      >
        Featured Businesses
      </h3>
      <div
        className="search"
      >
        <form
          onSubmit={[Function]}
        >
          <span>
            <input
              id="search"
              name="searchname"
              placeholder="Search by name..."
              type="text"
            />
          </span>
          <span>
            <button
              id="search"
              style={
                Object {
                  "paddingRight": "20px",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-search"
              />
            </button>
          </span>
        </form>
      </div>
       
      <br />
      <br />
      <div
        className="col-md-4"
      >
        <div
          style={
            Object {
              "float": "right",
              "textAlign": "left",
              "width": "90%",
            }
          }
        >
          <h4>
            Filter Businesses By:
          </h4>
          <br />
          <form
            onSubmit={[Function]}
          >
            <span>
              Category: 
            </span>
            <span>
              <select
                id="filter"
                name="searchcategory"
              >
                <option
                  value=""
                >
                  All
                </option>
                <option>
                  Technology
                </option>
                <option>
                  Tourism & Hotels
                </option>
                <option>
                  Health
                </option>
                <option>
                  Education
                </option>
                <option>
                  Finance & Accounting
                </option>
                <option>
                  Farming
                </option>
                <option>
                  Ecommerse
                </option>
                <option>
                  Real Estate
                </option>
                <option>
                  Manufacturing
                </option>
              </select>
            </span>
            <br />
            <br />
            <br />
            <span>
              Location: 
            </span>
            <span>
              <input
                id="filter"
                name="searchlocation"
                type="text"
              />
            </span>
             
            <br />
            <br />
            <br />
            <button
              className="btn btn-primary"
              style={
                Object {
                  "float": "right",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-search"
              />
               
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-md-8"
        style={
          Object {
            "paddingLeft": "40px",
          }
        }
      >
        <img
          alt=""
          id="loadpage"
          src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif"
        />
      </div>
    </div>
  </div>
  <Footer />
</div>
`;

exports[`CreateBusinesses component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="col-md-3"
  />
  <div
    className="col-md-6"
    id="businesscontent"
  >
    <h3>
      Create a business
    </h3>
    <br />
    <form
      className="create-business-form"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label>
          Name:
        </label>
        <input
          className="field"
          name="business_name"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Location:
        </label>
        <input
          className="field"
          name="location"
          required={true}
          type="text"
        />
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          Category:
        </label>
        <select
          className="field"
          name="category"
          required={true}
        >
          <option>
            Technology
          </option>
          <option>
            Tourism & Hotels
          </option>
          <option>
            Health
          </option>
          <option>
            Education
          </option>
          <option>
            Finance & Accounting
          </option>
          <option>
            Farming
          </option>
          <option>
            Ecommerse
          </option>
          <option>
            Real Estate
          </option>
          <option>
            Manufacturing
          </option>
        </select>
      </div>
      <br />
      <div
        className="form-group"
      >
        <label>
          About:
        </label>
        <br />
        <br />
        <textarea
          id="textarea"
          name="about"
          required={true}
          rows="8"
        />
      </div>
      <a
        style={
          Object {
            "float": "right",
            "marginTop": "180px",
          }
        }
      >
        <button
          className="btn btn-primary"
          type="submit"
        >
          Create
        </button>
      </a>
    </form>
  </div>
  <div
    className="col-md-3"
  />
  <Footer />
</div>
`;

exports[`Dashboard component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <DashboardContent />
  <Footer />
</div>
`;

exports[`EditBusiness component renders properly 1`] = `
<div
  className="row"
>
  <Header />
  <div
    className="row"
  >
    <div
      className="col-md-3"
    />
    <div
      className="col-md-6"
      id="businesscontent"
    >
      <h3
        style={
          Object {
            "color": "break",
            "paddingLeft": "20px",
          }
        }
      >
        Edit my business
      </h3>
      <br />
      <form
        className="create-business-form"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label>
            Name:
          </label>
          <input
            className="field"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Location:
          </label>
          <input
            className="field"
            name="location"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            Category:
          </label>
          <select
            className="field"
            name="category"
            onChange={[Function]}
            required={true}
          >
            <option />
            <option>
              Technology
            </option>
            <option>
              Tourism & Hotels
            </option>
            <option>
              Health
            </option>
            <option>
              Education
            </option>
            <option>
              Finance & Accounting
            </option>
            <option>
              Farming
            </option>
            <option>
              Ecommerse
            </option>
            <option>
              Real Estate
            </option>
            <option>
              Manufacturing
            </option>
          </select>
        </div>
        <br />
        <div
          className="form-group"
        >
          <label>
            About:
          </label>
          <br />
          <br />
          <textarea
            id="textarea"
            name="about"
            onChange={[Function]}
            required={true}
            rows="8"
            value=""
          />
        </div>
        <br />
        <a
          style={
            Object {
              "float": "right",
              "marginTop": "180px",
            }
          }
        >
          <button
            className="btn btn-primary"
            type="submit"
          >
            Update
          </button>
        </a>
      </form>
    </div>
    <div
      className="col-md-3"
    />
  </div>
  <Footer />
</div>
`;
